mType/tests/testFiles/import/pass/importStringPrimitive.mt
// Test: Import String from lib/primitives
import { String } from "../../lib/primitives/String.mt";

String text = "Hello, mType!";
print(text.toString());
